# nse-momentum-lab

./: .gitignore  .pre-commit-config.yaml  CODEMAP.md  ISSUES.md  METRICS_POLICY.md  README.md  STATUS.md  STRATEGY.md  docker-compose.yml  pyproject.toml
apps/nicegui/: main.py  paths.py
db/init/: 001_init.sql  002_add_job_run_idempotency.sql  003_add_performance_indexes.sql  004_add_ohlcv_created_at_columns.sql  005_align_job_run_extended_schema.sql  006_walk_forward_fold.sql
db/migrations/: 001_drop_ohlcv_tables.sql
docs/: 2LYNCH_FILTERS_SUMMARY.md  2LYNCH_STRATEGY_GUIDE.md  NICEGUI_DESIGN_SYSTEM.md  README.md  RESULTS.md  ROADMAP.md  TECHNICAL_DESIGN.md  dashboard-ui-ux-improvement-plan.md
docs/adr/: ADR-001-data-and-storage.md  ADR-001-market-data-sources-and-licensing.md  ADR-002-ingestion-and-adjustment.md  ADR-002-storage-architecture-postgres-minio.md  ADR-003-backtesting-system.md  ADR-004-agent-orchestration-phidata-glm.md  ADR-004-paper-trading-and-risk.md  ADR-005-nse-ingestion-pipeline.md  ADR-005-operations-and-quality.md  ADR-006-corporate-action-adjustment-engine.md  ADR-006-ui-and-agents.md  ADR-007-strategy-spec-4pct-2lynch.md  ADR-009-database-optimization-duckdb-parquet.md  ADR-009-experiment-registry.md  ADR-010-paper-trading-engine.md  ADR-011-dashboard-architecture.md  ADR-012-deployment-and-ops.md  ADR-013-db-schema-and-partitioning.md  ADR-014-artifact-versioning-minio.md  ADR-017-data-quality-and-reconciliation.md  ADR-018-monitoring-and-alerting.md  ADR-019-dividend-adjustment-and-total-return.md  ADR-021-custom-backtest-engine-selection.md  ADR-INDEX.md
docs/architecture/: CODE_REVIEW_REMEDIATION_PLAN.md  CPR_PARITY_IMPROVEMENT_PLAN.md  ENGINE_OPTIMIZATION_PLAN.md  KITE_INGESTION_PLAN.md  MULTI_STRATEGY_RESEARCH_PLATFORM_PLAN.md  PAPER_TRADING_WALK_FORWARD_PLAN.md  STOCKBEE_MARKET_MONITOR_CODING_BRIEF.md  STOCKBEE_MARKET_MONITOR_PLAN.md
docs/archive/: 10YEAR_BACKTEST_SUMMARY.md  BACKTEST_FEE_ANALYSIS.md  BACKTEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_DUCKDB.md  IMPLEMENTATION_PLAN.md  INDIAN_2LYNCH_ADAPTATION.md  LEGACY_2LYNCH_ADAPTATION.md  NICEGUI_MIGRATION_PLAN.md  PROGRESS_REPORT.md  QUANT_STRATEGY_GUIDE.md  SIGNAL_GENERATION_TEST.md  STOCKBEE_2LYNCH_COMPARISON.md  STOCKBEE_INDIAN_COMPARISON.md  VERIFICATION_REPORT.md  comprehensive-review.md
docs/dev/: AGENTS.md
docs/development/: STRATEGY_ONBOARDING.md
docs/guides/: AI_AGENT_INTEGRATION.md  DASHBOARD_GUIDE.md  DOCKER_PORT_MAPPING.md  DOPPLER_SETUP.md  LOCAL_STACK.md  PORT_CONFIGURATION.md  QUICK_START.md  VIEWING_RESULTS.md  ZERODHA_DATA_SETUP.md
docs/migrations/: MIGRATION_STRATEGY.md
docs/operations/: DATA_APPEND_GUIDE.md  DEPLOYMENT_AND_ROLLBACK.md  OHLC_REPAIR_MANIFEST.md  PARITY_INCIDENT_LOG.md  TABLE_LOAD_MATRIX.md  pre-open-live-paper.md
docs/overview/: HighLevelProjectOverview.md
docs/reference/: COMMANDS.md
docs/research/: BREAKDOWN_IMPROVEMENT_PLAN.md  BREAKDOWN_OPTION_SWEEP_2026-03-13.md  BREAKDOWN_WORKFLOW_SKILL.md  CANONICAL_REPORTING_RUNSET_2026-03-13.md  CANONICAL_REPORTING_RUNSET_2026-04-21.md  CANONICAL_REPORTING_RUNSET_2026-04-22.md  CANONICAL_REPORTING_RUNSET_2026-04-25.md  CANONICAL_REPORTING_RUNSET_2026-04-26.md
scripts/: add_r2_column.py  analyze_phase1_results.py  backtest_10year_fixed.py  backtest_10year_full.py  backtest_2lynch.py  backtest_500_stocks.py  backtest_indian_2lynch.py  batch_ingest_backtest.py  check_params.py  cleanup_backtest_retention.py  cleanup_invalid_backtests.py  cleanup_test_data.py  commands.ps1  compare_backtest_runs.py  compute_r2_batch.py  compute_r2_fast.py  compute_r2_optimized.py  compute_r2_proper_regression.py  compute_r2_properly.py  download_zerodha_daily.py  download_zerodha_data.py  filter_analysis.py  fix_2lynch_filters.py  fix_r2_all.py  fix_r2_computation.py  generate_html_report.py  ingest_test_sample.py  ingest_vendor_candles.py  kite_data_quality_report.py  kite_get_token.py  kite_refresh_instruments.py  minio_init.sh  paper_feed_audit_compare.py  parity_check.py  prune_backtest_history.py  quality_gate.py  rebuild_5min_parquet_from_raw.py  rebuild_daily_parquet_from_raw.py  rebuild_features_with_2lynch.py  repair_5min_parquet_from_cpr.py  (+20 more)
scripts/archive/: add_r2_column.py  compute_r2_batch.py  compute_r2_fast.py  compute_r2_optimized.py  compute_r2_proper_regression.py  compute_r2_properly.py  fix_r2_all.py  fix_r2_computation.py
src/nse_momentum_lab/: __init__.py  config.py
sweeps/: example_breakdown_profiles.yaml  example_threshold.yaml
tests/: README.md  conftest.py  requirements.txt  run_tests.bat  run_tests.sh  test_dashboard_phase1.py  test_health.py
tests/integration/: conftest.py  test_10year_backtest.py  test_2lynch_filters.py  test_2lynch_tuned.py  test_5year_backtest.py  test_complete_2lynch.py  test_corrected_2lynch.py  test_duckdb_vectorbt.py  test_duckdb_vectorbt_larger.py  test_fast_backtest.py  test_filter_analysis_100.py  test_filter_analysis_500.py  test_indian_2lynch.py
tests/playwright-cli/: README.md  run-all-tests.bat  (+7 more)
(+250 files in other folders)
